--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
       - /code/deps
       - /code/_build
       - /code/.elixir_ls
+      - /code/assets/node_modules
     depends_on:
       - database
     env_file: .env
